# information_based_preprocessing

./: .gitignore  README.md  main.py  pyproject.toml
src/: cycle_cutting.py  cycle_detector.py  data_utils.py  feature_selection.py  monitoring.py  processing.py  visualization.py
src/baseclasses/: detector_information.py  detector_output.py  processing_parameters.py
src/configuration/: config.py
