[tool.poetry]
name = "information-based-preprocessing"
version = "1.0.0"
description = ""
authors = [
    "jog <jonas.gram@ipa.fraunhofer.de>",
    "bgs <brandon.sai@ipa.fraunhofer.de>"
]
license = "GNU Lesser General Public License v3.0"
readme = "README.md"
packages = [{include = "information_based_preprocessing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.25.1"
pandas = "^2.0.3"
scipy = "^1.11.1"
sympy = "^1.12"
pyfftw = "^0.13.1"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
